# sdk

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  SConstruct  meson.build  sdk.spec
cmake/: FindSISDK.cmake
doc/: CMakeLists.txt  Doxyfile.in  meson.build
include/: camera.hpp  context.hpp  draw_array.hpp  draw_array.tpp  draw_command.hpp  draw_elements.hpp  draw_elements.tpp  event.hpp  files.hpp  icanvas.hpp  matrices.hpp  meson.build  program.hpp  rendercomponent.hpp  shader.hpp  sizable.hpp  storage.hpp  texture.hpp  vertex_attrib.hpp  vertex_index.hpp  vgl.hpp
include/sis/: botson_sdk.hpp  camera.hpp  component.hpp  draw_elements.hpp  draw_elements.tpp  event.hpp  files.hpp  identifiable.hpp  iprezi.h  matrices.hpp  pixel.hpp  program.hpp  renderbuffer.hpp  screen.hpp  shader.hpp  texture.hpp  vertex_attrib.tpp
samples/: .jenkinsfile  CMakeLists.txt  meson.build
samples/data/: CMakeLists.txt  meson.build
samples/data/shaders/: gear.frag  gear.vert  render2tex.comp  render2tex.frag  render2tex.vert  triangles.frag  triangles.vert
samples/egl/: cubemap_seamless.cpp  depth.cpp  meson.build  sampler.cpp
samples/glut/: render2tex.cpp  triangle.cpp
samples/glx/: CMakeLists.txt  glxgears.cpp  save2bmp.cpp
samples/glxgears/: CMakeLists.txt  bmp.h  glxgears.cpp  meson.build  render2tex.cpp  save2bmp.cpp
samples/include/: CMakeLists.txt  config.h  config.h.in
samples/samples/egl/: swizzle.cpp  texview.cpp
samples/samples/glut/: gears.cpp  meson.build
samples/samples/glx/: CMakeLists.txt  render2tex.cpp  save2bmp.h
sis/: CMakeLists.txt  context.cpp  files.cpp  framebuffer.cpp  matrices.cpp  meson.build  program.cpp  screen.cpp  shader.cpp  sis.pc.in  texture.cpp  vertex_index.cpp
sisdk/: CMakeLists.txt  meson.build
sisdk/include/: drawable.hpp  framebuffer.hpp  functions.hpp  program.hpp
sisdk/src/: common.hpp  matrices.cpp  texture.cpp
src/: SConscript  files.cpp  framebuffer.cpp  meson.build  program.cpp  shader.cpp  vertex_index.cpp
src/GLUtil/: GLUtil.cpp  GLUtil.h  GLUtilImp.cpp  GLUtilImp.h
src/common/: context.cpp  screen.cpp  test.hpp
